documentaion page for the project created with basic structure

--- a/Frontend/index.html
+++ b/Frontend/index.html
@@ -87,7 +87,7 @@
           <h1 data-aos="fade-up">Welcome to <span> JokeBox API</span></h1>
           <p data-aos="fade-up" data-aos-delay="100">Delivering laughter one endpoint at a time.<br></p>
           <div class="d-flex" data-aos="fade-up" data-aos-delay="200">
-            <a href="#" class="btn-get-started">Documentation</a>
+            <a href="/documentation.html" class="btn-get-started">Documentation</a>
             <a href="#" class="glightbox btn-watch-video d-flex align-items-center"><i class="bi bi-play-circle"></i><span>Watch Video Tutorial</span></a>
           </div>
           <img src="assets/img/hero2.svg" class="img-fluid hero-img" alt="" data-aos="zoom-out" data-aos-delay="300" style="height: 300px;">
